--- a/src/main/resources/templates/all_stores.html
+++ b/src/main/resources/templates/all_stores.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-    <h1>All Stores</h1>
+    <h1>All Stores  <a href="/coffee/addstore"> (Add a Store) </a> </h1>
+
 
     <table>
         <thead>
@@ -13,7 +14,7 @@
         </thead>
         {{#coffeeStores}}
         <tr>
-            <td> <a href="/coffee/{{id}}//menu"> {{storeName}} </a> </td>
+            <td> <a href="/coffee/{{id}}/menu"> {{storeName}} </a> </td>
         </tr>
         {{/coffeeStores}}
     </table>
